[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelprobe"
version = "1.0.0"
description = "AI-Powered Network Forensics CLI utility with advanced scanning and intelligence capabilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Lintshiwe Slade", email = "lintshiwe.slade@intelprobe.dev"}
]
maintainers = [
    {name = "Lintshiwe Slade", email = "lintshiwe.slade@intelprobe.dev"}
]
keywords = [
    "network-security",
    "network-forensics", 
    "penetration-testing",
    "vulnerability-scanner",
    "network-scanner",
    "cybersecurity",
    "osint",
    "ai-powered"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "scapy>=2.4.5",
    "pandas>=1.5.0",
    "python-nmap>=0.7.1",
    "psutil>=5.9.0",
    "netifaces>=0.11.0",
    "requests>=2.28.0",
    "rich>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/lintshiwe/IntelProbe"
Repository = "https://github.com/lintshiwe/IntelProbe.git"
Issues = "https://github.com/lintshiwe/IntelProbe/issues"
Documentation = "https://github.com/lintshiwe/IntelProbe/wiki"

[project.scripts]
intelprobe = "intelprobe.cli:main"
intel-scan = "network_scanner:main"
intel-quick = "quick-start:main"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
